Bootstrap finished. Some fixes